fixed issue on iphone

--- a/css/style.scss
+++ b/css/style.scss
@@ -187,6 +187,8 @@
                 font-size: 60px;
                 position: absolute;
                 top: 150px;
+                width: auto;
+                padding: 0;
                 left: 5px;
                 @media (max-width: 992px) {
                     top: initial;
@@ -198,6 +200,7 @@
                 border: none;
                 background-color: transparent;
                 color: #000000;
+                padding: 0;
                 font-size: 60px;
                 position: absolute;
                 top: 150px;
